# sacs

./: .gitmodules  CMakeLists.txt  HttpServer.cpp  HttpServer.h  HttpServerImpl.cpp  HttpServerImpl.h  JsonMsg.cpp  JsonMsg.h  LICENSE  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  Proxy.cpp  Proxy.h  ProxyServer.cpp  ProxyServer.h  README.md  SacsLib.cpp  ServerImpl.cpp  ServerImpl.h  WebAppData.h  WebAppDataTemplate.cpp  factory_html.h  index_html.h  script_html.h  style_html.h  web_pack.sh
examples/: ButtonAndLog.cpp  DynamicRegisterAndUnregister.cpp  Script.cpp  Start.cpp  TextFields.cpp
webapp/: factory.js  index.html  loader.js  message.builder.js  messenger.js  module.container.js  module.js  module.manager.js  module.selector.js  properties.js  reconnect.info.js  script.js  style.css  view.js  web.app.js
wrappers/: SacsWrapper.h  SacsWrapperNoLib.h
wrappers/android/: README.md  build.sh
wrappers/android/aar_lib/: settings.gradle
wrappers/android/aar_lib/gradle/wrapper/: gradle-wrapper.properties
wrappers/android/aar_lib/sacs/: build.gradle
wrappers/android/aar_lib/sacs/src/main/: AndroidManifest.xml
wrappers/android/aar_lib/sacs/src/main/java/dbpotato/net/sacs/: SacsWrapper.java
wrappers/android/jni/: CMakeLists.txt
wrappers/android/jni/src/: JniGlue.cpp  JniGlue.h  MsgThread.cpp
wrappers/java/: CMakeLists.txt
wrappers/java/jni/: JniGlue.cpp  JniLib.cpp  MsgThread.h
wrappers/java/src/dbpotato/net/sacs/: SacsWrapper.java
